--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "citas",
-    "slug": "citas",
+    "name": "CitasMemorias",
+    "slug": "CitasMemorias",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
